# chromaw

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml
.claude/: settings.json
.claude/agents/: doc-updater.md  implementer.md  product-manager.md  reviewer.md  tech-lead.md  tester.md
.claude/hooks/: adr-check.sh
.claude/skills/brainstorm/: SKILL.md
.claude/skills/new-spec/: SKILL.md
.claude/skills/next-task/: SKILL.md
.github/workflows/: ci.yml
docs/: technical-spec.md
docs/planning/: adr.md  roadmap.md
src/chromaw/: api.py  audit.py  backup.py  chroma_adapter.py  cli.py  embedding.py  errors.py  lock.py  models.py  security.py  server.py
tests/: conftest.py  test_audit.py  test_backup.py  test_chroma_adapter.py  test_cli.py  test_e2e_embedding_cli.py  test_e2e_server.py  test_embedding.py  test_lock.py  test_security.py  test_server.py  test_static.py  test_write_guard.py
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: delete.spec.ts  edit.spec.ts  fixtures.ts  global-setup.ts  search.spec.ts  smoke.spec.ts
web/src/: App.tsx  AppConfigContext.tsx  BulkPatchModal.tsx  ConfirmNameModal.tsx  DocumentEditor.tsx  MetadataEditor.tsx  RenameCollectionModal.tsx  ShortcutsHelpModal.tsx  UnifiedDiffView.tsx  api.ts  export.ts  jsonl.ts  main.tsx  shortcuts.ts  types.ts  useFocusTrap.ts  useKeyboardShortcuts.ts
