[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chromaw"
dynamic = ["version"]
description = "A local-first web UI to browse, search, and edit ChromaDB persistent directories."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "fastapi",
    "uvicorn",
    "chromadb",
    "pydantic",
    "python-multipart",
]

[project.scripts]
chromaw = "chromaw.cli:app"

[tool.hatch.version]
path = "src/chromaw/__init__.py"

[tool.hatch.build.targets.sdist]
artifacts = ["src/chromaw/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/chromaw"]
# src/chromaw/static/.gitkeep exists only to keep the (otherwise-empty,
# build-time-populated) static/ dir tracked in git; it is not a real asset.
# It is excluded here so it doesn't collide with the force-include below,
# which hatchling forbids (a path may only be added to the wheel once).
exclude = ["src/chromaw/static/.gitkeep"]

[tool.hatch.build.targets.wheel.force-include]
"src/chromaw/static" = "chromaw/static"

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests that launch a real subprocess/server (slower, run by default in CI)",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]
